# bartending_cobot

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md
.github/: assigment_10.md  co-pilot-instructions.md
.github/workflows/: colcon_build.yml  pylint.yml
scripts/: build_ws.py  check_environment.py
src/bartending_cobot_bringup/: CMakeLists.txt  manipulator_bringupConfig.cmake.in  manipulator_bringupConfigVersion.cmake.in  package.xml
src/bartending_cobot_bringup/config/: manipulator_controllers.yaml
src/bartending_cobot_bringup/launch/: r6bot.launch.py
src/bartending_cobot_description/: CMakeLists.txt  manipulator_descriptionConfig.cmake.in  manipulator_descriptionConfigVersion.cmake.in  package.xml
src/bartending_cobot_description/sdf/: world.sdf
src/bartending_cobot_description/urdf/: bartending_cobot.xacro  bartending_cobot.xacro.urdf
src/manipulator_bringup/: CMakeLists.txt  manipulator_bringupConfig.cmake.in  manipulator_bringupConfigVersion.cmake.in  package.xml
src/manipulator_bringup/launch/: r6bot.launch.py
src/manipulator_description/: CMakeLists.txt  manipulator_descriptionConfig.cmake.in  manipulator_descriptionConfigVersion.cmake.in  package.xml
src/manipulator_description/gazebo/: manipulator.gazebo.xacro
src/manipulator_description/urdf/: manipulator.urdf.xacro
src/manipulator_viz_core/: package.xml  setup.cfg  setup.py
src/manipulator_viz_core/manipulator_viz_core/: run_viz.py
src/manipulator_viz_core/test/: test_flake8.py
src/manipulator_viz_demo/: package.xml  setup.cfg  setup.py
src/manipulator_viz_demo/manipulator_viz_demo/: run_demo.py
src/manipulator_viz_plugin/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/manipulator_viz_plugin/include/manipulator_viz_plugin/: manipulator_viz_plugin.hpp  manipulator_viz_tool.hpp  visibility_control.h
src/manipulator_viz_plugin/src/: manipulator_viz_plugin.cpp  manipulator_viz_tool.cpp
