<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bartending_cobot_description</name>
  <version>0.0.0</version>
  <description>Package with URDF and description files of test robots.</description>

  <maintainer email="phgandh2@ncsu.edu">Prem Gandhi</maintainer>
  <maintainer email="ljimenez@ennovatec.co">Luis Jimenez</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
