<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulator_bringup</name>
  <version>0.0.0</version>
  <description>Demoros2_control simulation with 6Dof Manipulator.</description>

  <maintainer email="phgandh2@ncsu.edu">Prem Gandhi</maintainer>
  <maintainer email="ljimenez@ennovatec.co">Luis Jimenez</maintainer>

  <license>MIT</license>

  <author email="phgandh2@ncsu.edu">Prem Gandhi</author>
  <author email="ljimenez@ennovatec.co">Luis Jimenez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- ros2_control_cmake dep simplifies CMakeLists.txt by providing CMake macros -->
   <!-- More details here: https://github.com/ros-controls/ros2_control_cmake -->
  <build_depend>ros2_control_cmake</build_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
