<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulator_bringup</name>
  <version>0.0.0</version>
  <description>Demo using ros2_control and Gazebo simulation with 6Dof Manipulator.</description>

  <maintainer email="phgandh2@ncsu.edu">Prem Gandhi</maintainer>
  <maintainer email="ljimenez@ennovatec.co">Luis Jimenez</maintainer>

  <license>MIT</license>

  <author email="phgandh2@ncsu.edu">Prem Gandhi</author>
  <author email="ljimenez@ennovatec.co">Luis Jimenez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- ros2_control_cmake dep simplifies CMakeLists.txt by providing CMake macros -->
   <!-- More details here: https://github.com/ros-controls/ros2_control_cmake -->
  <build_depend>ros2_control_cmake</build_depend>

  <!-- backward_ros is a stack trace pretty printer for C++ -->
  <!-- More details can be found here: https://github.com/bombela/backward-cpp -->
  <depend>backward_ros</depend>
  <!-- hardware_interface, pluginlib, rclcpp, and rclcpp_lifecylce are dependencies
    required for writing a hardware interface
    Check the following link for more details:
    https://control.ros.org/master/doc/ros2_control/hardware_interface/doc/writing_new_hardware_component.html
  -->
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <!-- ros2_control node for managing controllers -->
  <!-- Brief explanation here: https://control.ros.org/jazzy/doc/getting_started/getting_started.html#controller-manager -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <!-- Xacro used to simplify building URDF files  -->
  <!-- More details here: https://wiki.ros.org/xacro -->
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
